fix: correct button text visibility on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,7 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
+  color: #000;
 }
 button {
   cursor: pointer;
@@ -65,6 +66,7 @@ h1 {
   background-color: var(--attention-light);
 }
 .SearchForm button {
+  color: #000;
   background-color: #fff;
   border: 1px solid var(--dark);
   border-radius: 0.5rem;
